--- a/etc/systemd/system/mouse.service
+++ b/etc/systemd/system/mouse.service
@@ -2,9 +2,9 @@
 Description=Keyboard Daemon
 
 [Service]
-ExecStart=/bin/bash -c '/home/wesley/usb-otg/mouse.sh start'
+ExecStart=/bin/bash -c '/etc/trabalhator/mouse.sh start'
 ExecStop=/bin/kill -9 $MAINPID
-ExecStop=/bin/bash -c '/home/wesley/usb-otg/mouse.sh stop'
+ExecStop=/bin/bash -c '/etc/trabalhator/mouse.sh stop'
 Restart=no
 User=root
 
